# trading-bot

./: Cargo.toml
src/: main.rs
