[package]
name = "trading-bot"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
anyhow = "1.0.44"
rust_decimal = "1.16.0"
pretty_env_logger = "0.4.0"
binance = { git = "https://github.com/wisespace-io/binance-rs.git" }